...
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white">
        </TextView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_item_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/bg_yellow"
...
        android:id="@+id/asc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ascending"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_search_view">

    </TextView>

    <LinearLayout
        android:id="@+id/sortLayoutAsc"
        android:layout_width="match_parent"
...
            android:text="Tags"
            android:textColor="@color/black" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/total_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sortLayoutDes">

        <Button
            android:id="@+id/allFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="allFilterTapped"
            android:text="All"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/dateFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="dateFilterTapped"
            android:text="Date"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/descFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="descFilterTapped"
            android:text="Descr"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/makeFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="makeFilterTapped"
            android:text="Make"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/tagsFilterButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/darkerGray"
            android:onClick="tagsFilterTapped"
            android:text="Tags"
...
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <!-- Add Tag Button -->
        <Button
            android:id="@+id/mutliple_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="Add Tag" />

        <!-- Delete Button -->
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
...
