<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter" />
    <item
        android:id="@+id/navigation_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/navigation_logout"
        android:title="@string/Profile"
        android:icon="@drawable/ic_logout"/>
</menu>
